# huffman-compress

./: .gitignore  CMakeLists.txt  Makefile  README.md  big.cpp  big.h  huffman.cpp  huffman.h  main.cpp  small.cpp  small.h  tempwindow.cpp  tempwindow.h  ttt  ttt.cpp
include/: big.h  huffman.h  small.h
source/: 1.circ  1.txt  data.txt  txt.dat 
source/213/: 1.txt
src/: big.cpp  huffman.cpp  main.cpp  small.cpp  tempwindow.cpp
